--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@
 
 .laptop {
   width: 600px;
-  height: 379px;
+  height: 350px;
   flex: 1;
   position: relative;
 }
@@ -298,4 +298,8 @@
   width: 50px;
   height: 30px;
   margin-right: 3px;
+}
+
+.laptopApp {
+  height: 280px;
 }
